refactor: modernize entire codebase — Spring Boot 3 + constructor injection + OpenAPI 3
- Upgrade Spring Boot 2.7.5 → 3.4.2, Spring Security 5 → 6, MyBatis Spring Boot 2 → 3
- Migrate Swagger 2 (Springfox) → OpenAPI 3 (springdoc-openapi 2.8.4)
- Migrate javax.* → jakarta.* namespace
- Replace all @Controller + @ResponseBody with @RestController
- Replace all @Autowired field injection with @RequiredArgsConstructor + private final
- Replace @RequestMapping(method=RequestMethod.XXX) with @GetMapping/@PostMapping
- Upgrade JJWT 0.9.1 → 0.12.6, commons-collections → commons-collections4
- Modernize mall-security: constructor injection for filters and security config
- Modernize mall-search: EsProductController + EsProductServiceImpl
- Modernize mall-portal: 13 controllers, 15 service impls, 4 config/components

252 files changed across all modules. Full compilation verified.