@@ -7,63 +7,47 @@ import com.macro.mall.model.UmsAdminExample;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
 
 import java.util.List;
 
-/**
- * SpringSecurity相关配置
- * Created by macro on 2018/4/26.
- */
 @Configuration
 @EnableWebSecurity
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
+public class SecurityConfig {
     @Autowired
     private UmsAdminMapper umsAdminMapper;
 
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        http.authorizeRequests()//配置权限
-//                .antMatchers("/").access("hasRole('TEST')")//该路径需要TEST角色
-//                .antMatchers("/brand/list").hasAuthority("TEST")//该路径需要TEST权限
-                .antMatchers("/**").permitAll()
-                .and()//启用基于http的认证
+    @Bean
+    SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http.authorizeHttpRequests()
+                .requestMatchers("/**").permitAll()
+                .and()
                 .httpBasic()
                 .realmName("/")
-                .and()//配置登录页面
+                .and()
                 .formLogin()
                 .loginPage("/login")
                 .failureUrl("/login?error=true")
-                .and()//配置退出路径
+                .and()
                 .logout()
                 .logoutSuccessUrl("/")
-//                .and()//记住密码功能
-//                .rememberMe()
-//                .tokenValiditySeconds(60*60*24)
-//                .key("rememberMeKey")
-                .and()//关闭跨域伪造
+                .and()
                 .csrf()
                 .disable()
-                .headers()//去除X-Frame-Options
+                .headers()
                 .frameOptions()
                 .disable();
-    }
-
-    @Override
-    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-        auth.userDetailsService(userDetailsService()).passwordEncoder(new BCryptPasswordEncoder());
+        return http.build();
     }
 
     @Bean
     public UserDetailsService userDetailsService() {
-        //获取登录用户信息
         return new UserDetailsService() {
             @Override
             public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
@@ -71,7 +55,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                 example.createCriteria().andUsernameEqualTo(username);
                 List<UmsAdmin> umsAdminList = umsAdminMapper.selectByExample(example);
                 if (umsAdminList != null && umsAdminList.size() > 0) {
-                    return new AdminUserDetails(umsAdminList.get(0));
+                    return new AdminUserDetails(umsAdminList.getFirst());
                 }
                 throw new UsernameNotFoundException("用户名或密码错误");
             }
